--- a/bundle/notebook/data_quality_report.ipynb
+++ b/bundle/notebook/data_quality_report.ipynb
@@ -16,7 +16,7 @@
     "%%capture\n",
     "!pip install matatika==1.13.0\n",
     "!pip install wheel\n",
-    "!pip install pandas==1.4.3\n",
+    "!pip install pandas==1.4.3 numpy==1.26.4\n",
     "!pip install weasyprint==58.1\n",
     "!pip install matatika-iplotter==1.3.0\n",
     "!pip install git+https://github.com/Matatika/htmlcharts.git@v0.1.0"
