Updated the report notebook to no longer take in a client_id and secret to refresh the access_token, we no just re run the email report pipeline

--- a/bundle/notebook/data_quality_report.ipynb
+++ b/bundle/notebook/data_quality_report.ipynb
@@ -65,11 +65,8 @@
     "\n",
     "# Attempt to use the pipeline 'AUTH_TOKEN'\n",
     "auth_token = os.getenv('AUTH_TOKEN')\n",
-    "# On 401 use CLIENT_ID and CLIENT_SECRET to refresh\n",
-    "client_id = os.getenv('NOTEBOOK_CLIENT_ID')\n",
-    "client_secret = os.getenv('NOTEBOOK_CLIENT_SECRET')\n",
     "\n",
-    "client = MatatikaClient(auth_token=auth_token, client_id=client_id, client_secret=client_secret, endpoint_url=endpoint_url, workspace_id=workspace_id)\n",
+    "client = MatatikaClient(auth_token=auth_token, endpoint_url=endpoint_url, workspace_id=workspace_id)\n",
     "plotter = ChartJSPlotter()"
    ]
   },
